# Numerical_a2

./: CMakeLists.txt  README.md  b_out.csv  eul.out  lagrange.csv  lax.out  out_interp.csv  out_linalsys.csv  out_shock.csv  splines.csv
data/: in_interp.csv  in_shock.csv  in_waveeqn.csv
diff_outputs/: .~lock.out_waveeqn_EU.csv#  .~lock.out_waveeqn_EU.xlsx#  .~lock.out_waveeqn_LW.csv#  .~lock.out_waveeqn_LW.xlsx#  out_waveeqn_EU.csv  out_waveeqn_EU.xlsx  out_waveeqn_LW.csv  out_waveeqn_LW.xlsx
report/: report.aux  report.tex
src/: CMakeLists.txt  aux.py  diff.c  diff.h  interp.c  interp.h  main.c  newton_ralphson.c  newton_ralphson.h  tasks.c  tasks.h  testing.c  thomas.c  thomas.h  utilities.c  utilities.h  utils_2.c  utils_2.h
